--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
 
     <script defer src="app.js"></script>
     <title>To Do List</title>
@@ -28,7 +32,7 @@
         <input id="userInput" type="text" placeholder="things to do" />
         <button id="addInput">➕</button>
         <button class="reset">Reset</button>
-        <div class="userInputContent" id="contentContainer"></div>
+        <div class="userInputContent"></div>
       </figure>
     </main>
   </body>
